Add centralized server/client entity list
Previously, features had mostly independent logic for entity iteration.
Most of this functionality has been merged into utils/ent_list.hpp
which includes utilities for iterating over all server & client
entities. There's also functionality for portal iteration and getting
the player.

General changes related to entity iteration:

  - merged all player-getting logic into utils/ent_list

  - removed a bunch of redundant functions from ent_utils

  - synced up client & server indices (0 is world & 1 is player)

Portal selection logic has also been updated. Previously, cvar values
like "blue", "orange", or "auto" meant different things depending on
the cvar/feature logic. The logic for these "selectors" has been made
"smarter" and merged into getPortal.

General changes related to portal iteration:

  - changed most portal handling logic to use utils::PortalInfo objects

  - removed global GetEnvironmentPortal (now part of entity list logic)

  - added default descriptions to use for portal selection cvars

  - added an "env" portal selector

  - updated overlay, vag_trace, vag_searcher, and sg_collide_vis
    features to all use getPortal

  - removed "overlay" option from spt_draw_vag_entry_portal

Misc changes:

  - updated logic for spt_print_ents (now prints both server & client
    ents)

  - incremented tas_strafe_version to 8 (to support backwards compat
    for tas_aim_ent and spt_playerio.GetPlayerEyePos)

  - added a 'new' way to spt_playerio.GetPlayerEyePos

  - added utils::CachedField::GetValueOrDefault/GetValueOrDefaultPlayer

  - added utils::CachedFields

--- a/spt.vcxproj
+++ b/spt.vcxproj
@@ -448,7 +448,7 @@ del "$(OutDir)spt-version.obj"</Command>
     </PreBuildEvent>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>spt\utils;thirdparty\curl\include;.;SDK\episode1_new\include\common;SDK\episode1_new\include\public;SDK\episode1_new\include\public\tier0;SDK\episode1_new\include\public\tier1;SDK\episode1_new\include\game\server;SDK\episode1_new\include\game\client;SDK\episode1_new\include\game\shared;SPTLib\Windows\minhook\include;SPTLib\Windows\Minhook\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>spt\utils;thirdparty\curl\include;.;SDK\episode1_new\include\common;SDK\episode1_new\include\public;SDK\episode1_new\include\public\tier0;SDK\episode1_new\include\public\tier1;SDK\episode1_new\include\game_shared;SPTLib\Windows\minhook\include;SPTLib\Windows\Minhook\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>OE;WIN32;_WIN32;_DEBUG;DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;sptONLY;_MBCS;%(PreprocessorDefinitions);TARGET_NAME="$(TargetName).dll"</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -855,7 +855,7 @@ del "$(OutDir)spt-version.obj"</Command>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <AdditionalIncludeDirectories>spt\utils;thirdparty\curl\include;.;SDK\episode1_new\include\common;SDK\episode1_new\include\public;SDK\episode1_new\include\public\tier0;SDK\episode1_new\include\public\tier1;SDK\episode1_new\include\game\server;SDK\episode1_new\include\game\client;SDK\episode1_new\include\game\shared;SPTLib\Windows\minhook\include;SPTLib\Windows\Minhook\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>spt\utils;thirdparty\curl\include;.;SDK\episode1_new\include\common;SDK\episode1_new\include\public;SDK\episode1_new\include\public\tier0;SDK\episode1_new\include\public\tier1;SDK\episode1_new\include\game_shared;SPTLib\Windows\minhook\include;SPTLib\Windows\Minhook\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>OE;WIN32;_WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;sptONLY;_MBCS;%(PreprocessorDefinitions);TARGET_NAME="$(TargetName).dll"</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -1362,6 +1362,8 @@ del "$(OutDir)spt-version.obj"</Command>
     <ClCompile Include="spt\strafe\strafestuff.cpp" />
     <ClCompile Include="spt\utils\convar.cpp" />
     <ClCompile Include="spt\utils\datamap_wrapper.cpp" />
+    <ClCompile Include="spt\utils\ent_list_client.cpp" />
+    <ClCompile Include="spt\utils\ent_list_server.cpp" />
     <ClCompile Include="spt\utils\ent_utils.cpp" />
     <ClCompile Include="spt\utils\file.cpp" />
     <ClCompile Include="spt\utils\game_detection.cpp" />
@@ -1496,6 +1498,7 @@ del "$(OutDir)spt-version.obj"</Command>
     <ClInclude Include="spt\utils\convar.hpp" />
     <ClInclude Include="spt\utils\custom_interfaces.hpp" />
     <ClInclude Include="spt\utils\datamap_wrapper.hpp" />
+    <ClInclude Include="spt\utils\ent_list.hpp" />
     <ClInclude Include="spt\utils\ent_utils.hpp" />
     <ClInclude Include="spt\utils\file.hpp" />
     <ClInclude Include="spt\utils\game_detection.hpp" />
