--- a/spt.vcxproj
+++ b/spt.vcxproj
@@ -1367,6 +1367,7 @@ del "$(OutDir)spt-version.obj"</Command>
     <ClCompile Include="spt\utils\ent_utils.cpp" />
     <ClCompile Include="spt\utils\file.cpp" />
     <ClCompile Include="spt\utils\game_detection.cpp" />
+    <ClCompile Include="spt\utils\map_utils.cpp" />
     <ClCompile Include="spt\utils\math.cpp" />
     <ClCompile Include="spt\utils\portal_utils.cpp" />
     <ClCompile Include="spt\utils\signals.cpp" />
@@ -1504,6 +1505,7 @@ del "$(OutDir)spt-version.obj"</Command>
     <ClInclude Include="spt\utils\game_detection.hpp" />
     <ClInclude Include="spt\utils\interfaces.hpp" />
     <ClInclude Include="spt\utils\ivp_maths.hpp" />
+    <ClInclude Include="spt\utils\map_utils.hpp" />
     <ClInclude Include="spt\utils\math.hpp" />
     <ClInclude Include="spt\utils\portal_utils.hpp" />
     <ClInclude Include="spt\utils\signals.hpp" />
